Closed
Bug 361587
Opened 18 years ago
Closed 18 years ago
[cocoa-cairo] SVG gradient replacement crash [@ ComputeGradientValue]
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: tor)
References
Details
(Keywords: crash, testcase)
Crash Data
Attachments
(2 files)
823 bytes,
image/svg+xml
|
Details | |
1.90 KB,
patch
|
vlad
:
review+
|
Details | Diff | Splinter Review |
Loading the testcase makes Firefox crash. (I'm testing with the patch for bug 361569.)
I can't reproduce in a nightly build from a few days ago, so I'm guessing this is a regression from cairo-cocoa or from bug 361569.
Reporter | ||
Comment 1•18 years ago
|
||
The nquartz backend doesn't like having a gradient with zero stops. While it should probably deal with it more gracefully, we should follow the SVG specification and avoid doing wasted work in this case.
Comment on attachment 246352 [details] [diff] [review]
don't paint using gradient with zero stops
Hmm, yeah, I need to fix this in nquartz as well.
Attachment #246352 -
Flags: review?(vladimir) → review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ ComputeGradientValue]
You need to log in
before you can comment on or make changes to this bug.
Description
•