Bug 361587 - avoid paint work on gradient with no stops.  r=vlad